# CMakeProject

./: CMakeLists.txt  README.md
src/: main.cpp
src/gui/: mainwindow.cpp  mainwindow.h
src/server/: server.cpp  server.h
